fix database table

--- a/env.example
+++ b/env.example
@@ -1,24 +1,25 @@
+# 环境配置文件
+# 复制此文件为 .env 并填入实际值
+
 # 数据库配置
 DATABASE_URL=sqlite:///./isp_knowledge.db
-# 或 PostgreSQL
-# DATABASE_URL=postgresql://user:password@localhost/isp_knowledge
 
-# QWEN API配置
-QWEN_API_KEY=your_qwen_api_key
+# QWEN API配置 (必需)
+QWEN_API_KEY=your_qwen_api_key_here
 QWEN_BASE_URL=https://dashscope.aliyuncs.com/api/v1
 
-# JWT配置
-SECRET_KEY=your_secret_key_here_make_it_long_and_random
+# JWT配置 (必需)
+SECRET_KEY=your_secret_key_here_must_be_very_long_and_random
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Redis配置 (可选)
-REDIS_URL=redis://localhost:6379
+# Redis配置 (可选，用于缓存)
+REDIS_URL=redis://localhost:6379/0
 
 # 服务器配置
 HOST=0.0.0.0
 PORT=8000
-DEBUG=True
+DEBUG=true
 
 # 日志配置
 LOG_LEVEL=INFO
